<resources>
    <string name="app_name">DrinKuy</string>
    <string name="content_desc">Content Description</string>
    <string name="log_in">Log In</string>
    <string name="close">Close</string>
    <string name="navigation_home">Home</string>
    <string name="navigation_medals">Medals</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="navigation_shop">Shop</string>
    <string name="navigation_profile">Profile</string>
    <string name="level">Level %x</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="create_an_account">Create an account</string>
    <string name="comlete_biodata">Complete Biodata</string>
    <string name="havent_acc">Haven\'t an account? Register here!</string>
    <string name="name">Name</string>
    <string name="enter_name">Enter your name here</string>
    <string name="bday">Birthday</string>
    <string name="select_birthday">Select your birthday</string>
    <string name="email">Email</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="make_a_password">Make a password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="register">Register</string>
    <string name="password">Password</string>
    <string name="log_out">Log out</string>
    <string name="notifications">Notifications</string>
    <string name="complete_your_data_first">Complete your data first</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="input_your_height">Input your height</string>
    <string name="input_your_weight">Input your weight</string>
    <string name="save">Save</string>
    <string name="cm">cm</string>
    <string name="kg">kg</string>
    <string name="submit">Submit</string>
    <string name="confirm">Yes</string>
    <string name="cancel">Cancel</string>
    <string name="how_much_did_you_just_drink">How much did you just drink? (mL)</string>
    <string name="are_you_sure">You sure you want to buy %s?</string>
    <string name="purchase_failed">Failed to purchase, insufficient points.</string>
    <string name="purchase_success">Purchase success.</string>
    <string name="level_up">You Leveled Up!</string>
    <string name="drank_water">Hi %s, You drank %s mL today</string>
    <string name="add_your_progress">Add your progress</string>
    <string name="title_activity_leaderboard">LeaderboardActivity</string>
    <string name="welcome_to_drinkuy_please_login_to_continue">Welcome to DrinKuy, please login to continue!</string>
    <string name="haven_t_an_account_yet_register_here">Haven\'t an account yet? Register here</string>
    <string name="welcome_to_drinkuy">Welcome to DrinKuy!</string>
    <string name="challenge">Challenge</string>
    <string name="progress">%s\%%</string>
    <string name="highest_streak_leaderboard">Highest Streak : %s</string>
    <string name="total_water_leaderboard">Total Water : %s</string>
    <string name="challenge_progress">%s/%s</string>
    <string name="gender">Gender</string>
    <string name="edit_your_profile">Edit Your Profile</string>
    <string name="error_name">Invalid Name (name must be more than 4 character and less than 30 character)</string>
    <string name="error_weight">Invalid Weight (input your weight in kilograms)</string>
    <string name="error_height">Invalid Height (input your weight in centimeters)</string>
    <string name="error_gender">Select your gender</string>
    <string name="error_bday">Select your Birthday</string>
    <string-array name="Gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string name="remind_me">Enable Notifications</string>
    <string name="wake_up_time">Wake up time</string>
    <string name="sleep_time">Sleep time</string>
    <string name="wake_up_time_summary">Set wake up time</string>
    <string name="sleep_time_summary">Set sleep time</string>
    <string-array name="notif_select_value">
        <item>0</item>
        <item>1</item>
    </string-array>
    <string-array name="notif_select">
        <item>Disable</item>
        <item>Enable</item>
    </string-array>
    <string name="key_enable_notif">key_notif</string>
    <string name="key_duration">key_duration</string>
    <string name="key_wake">key_wake</string>
    <string name="key_sleep">key_sleep</string>
    <string name="choose_image">Choose image</string>
    <string name="upload_image">Upload image</string>
    <string name="tooltip_home">Indonesian Ministry of Health stated that we need at least 2L of water daily</string>
    <string name="tooltip_shop">You can gain points by checking in and completing challenges!</string>
    <string name="notif_sum">Enable to remind you to drink.</string>
    <string name="completed">COMPLETED</string>
    <string name="select_your_progress_bar_theme">Select Your Progress Bar Theme</string>
    <string name="apply">Apply</string>
    <string name="owned">Owned</string>
    <string name="insuff_level">Insufficient Level, req level : %s</string>

</resources>