<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_12sdp"
    tools:context=".ui.register.biodata.BiodataActivity"
    android:background="@color/col_bg">

    <TextView
        android:id="@+id/tvRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:textSize="@dimen/_25ssp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17sdp"
        android:text="@string/complete_your_data_first"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterTitle" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/name"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />


        <EditText
            android:autofillHints="Name"
            android:id="@+id/etName"
            android:layout_width="0dp"
            android:layout_height="@dimen/_40sdp"
            android:layout_marginTop="@dimen/_4sdp"
            android:background="@color/white"
            android:hint="@string/enter_name"
            android:inputType="text"
            android:letterSpacing="0.08"
            android:lineSpacingExtra="2sp"
            android:paddingStart="10dp"
            android:paddingLeft="10dp"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.483"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView1" />

    <TextView
        android:id="@+id/tvErrorName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/error_name"
        android:textColor="@color/red"
        android:textSize="@dimen/_9ssp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/etName"
        app:layout_constraintStart_toStartOf="@+id/etName"
        app:layout_constraintTop_toBottomOf="@+id/etName" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/gender"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvErrorName" />

    <Spinner
        android:id="@+id/spinnerGender"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/spinner_bg"
        android:letterSpacing="0.08"
        android:lineSpacingExtra="2sp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tvErrorGender"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/error_gender"
        android:visibility="gone"
        android:textColor="@color/red"
        android:textSize="@dimen/_9ssp"
        app:layout_constraintEnd_toEndOf="@id/spinnerGender"
        app:layout_constraintStart_toStartOf="@+id/spinnerGender"
        app:layout_constraintTop_toBottomOf="@+id/spinnerGender" />


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/bday"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvErrorGender" />

    <EditText
        android:autofillHints="Birthday"
        android:id="@+id/etBday"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@color/white"
        android:hint="@string/select_birthday"
        android:inputType="date"
        android:letterSpacing="0.08"
        android:lineSpacingExtra="2sp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/tvErrorBday"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/error_bday"
        android:textColor="@color/red"
        android:textSize="@dimen/_9ssp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/etBday"
        app:layout_constraintStart_toStartOf="@+id/etBday"
        app:layout_constraintTop_toBottomOf="@+id/etBday" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/height"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvErrorBday" />

    <EditText
        android:id="@+id/etHeight"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="4dp"
        android:autofillHints="Height"
        android:background="@color/white"
        android:hint="@string/input_your_height"
        android:inputType="number"
        android:letterSpacing="0.08"
        android:lineSpacingExtra="2sp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.516"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/etHeight"
        app:layout_constraintEnd_toEndOf="@id/etHeight"
        app:layout_constraintBottom_toBottomOf="@id/etHeight"
        android:text="@string/cm"
        android:layout_marginEnd="@dimen/_10sdp"
        />

    <TextView
        android:id="@+id/tvErrorHeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/error_height"
        android:textColor="@color/red"
        android:textSize="@dimen/_9ssp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/etHeight"
        app:layout_constraintStart_toStartOf="@+id/etHeight"
        app:layout_constraintTop_toBottomOf="@+id/etHeight" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/weight"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvErrorHeight" />

    <EditText
        android:autofillHints="Weight"
        android:id="@+id/etWeight"
        android:layout_width="0dp"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@color/white"
        android:hint="@string/input_your_weight"
        android:inputType="number"
        android:letterSpacing="0.08"
        android:lineSpacingExtra="2sp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_10sdp"
        android:text="@string/kg"
        app:layout_constraintBottom_toBottomOf="@id/etWeight"
        app:layout_constraintEnd_toEndOf="@id/etWeight"
        app:layout_constraintTop_toTopOf="@id/etWeight" />

    <TextView
        android:id="@+id/tvErrorWeight"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:text="@string/error_weight"
        android:textColor="@color/red"
        android:textSize="@dimen/_9ssp"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="@id/etWeight"
        app:layout_constraintStart_toStartOf="@+id/etWeight"
        app:layout_constraintTop_toBottomOf="@+id/etWeight" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:backgroundTint="@color/col_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvErrorWeight" />

</androidx.constraintlayout.widget.ConstraintLayout>