<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_12sdp"
    tools:context=".ui.register.RegisterActivity"
    android:background="@color/col_def">

    <TextView
        android:id="@+id/tvRegisterTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_an_account"
        android:textSize="@dimen/_25ssp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_17sdp"
        android:text="@string/havent_acc"
        android:textColor="@color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRegisterTitle" />

<!--    <TextView-->
<!--        android:id="@+id/textView1"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="@dimen/_20sdp"-->
<!--        android:text="@string/full_name"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="@dimen/_12sdp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />-->


<!--    <EditText-->
<!--        android:id="@+id/etName"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="@dimen/_30sdp"-->
<!--        android:layout_marginTop="@dimen/_4sdp"-->
<!--        android:background="@color/white"-->
<!--        android:hint="@string/enter_name"-->
<!--        android:inputType="text"-->
<!--        android:letterSpacing="0.08"-->
<!--        android:lineSpacingExtra="2sp"-->
<!--        android:paddingStart="10dp"-->
<!--        android:paddingLeft="10dp"-->
<!--        android:paddingEnd="10dp"-->
<!--        android:paddingRight="10dp"-->
<!--        android:textSize="@dimen/_12ssp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.483"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView1" />-->

<!--    <TextView-->
<!--        android:id="@+id/textView2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginTop="@dimen/_20sdp"-->
<!--        android:text="@string/bday"-->
<!--        android:textColor="@color/white"-->
<!--        android:textSize="@dimen/_12sdp"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/etName" />-->

<!--    <EditText-->
<!--        android:id="@+id/etBday"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="@dimen/_30sdp"-->
<!--        android:layout_marginTop="@dimen/_4sdp"-->
<!--        android:background="@color/white"-->
<!--        android:hint="@string/select_birthday"-->
<!--        android:inputType="date"-->
<!--        android:letterSpacing="0.08"-->
<!--        android:lineSpacingExtra="2sp"-->
<!--        android:paddingStart="10dp"-->
<!--        android:paddingLeft="10dp"-->
<!--        android:paddingEnd="10dp"-->
<!--        android:paddingRight="10dp"-->
<!--        android:textSize="@dimen/_12ssp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/textView2" />-->

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/email"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <EditText
        android:autofillHints="Email"
        android:id="@+id/etEmail"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@color/white"
        android:hint="@string/enter_your_email_address"
        android:inputType="textEmailAddress"
        android:letterSpacing="0.08"
        android:lineSpacingExtra="2sp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        android:text="@string/password"
        android:textColor="@color/white"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEmail" />

    <EditText
        android:autofillHints="Password"
        android:id="@+id/etPass"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@color/white"
        android:hint="@string/make_a_password"
        android:inputType="textPassword"
        android:letterSpacing="0.08"
        android:lineSpacingExtra="2sp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <EditText
        android:autofillHints="Confirm your password"
        android:id="@+id/etPassConf"
        android:layout_width="0dp"
        android:layout_height="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@color/white"
        android:hint="@string/confirm_your_password"
        android:inputType="textPassword"
        android:letterSpacing="0.08"
        android:lineSpacingExtra="2sp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPass" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/register"
        android:textColor="@color/black"
        android:backgroundTint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etPassConf" />

</androidx.constraintlayout.widget.ConstraintLayout>